Relinking and removal of file

--- a/server/login.html
+++ b/server/login.html
@@ -68,7 +68,7 @@ body {
 			<input type="text" class="input-block-level"
 				placeholder="Email address"> <input type="password"
 				class="input-block-level" placeholder="Password">
-			<a class="btn btn-large btn-primary" type="submit" href="profile.html">Sign
+			<a class="btn btn-large btn-primary" type="submit" href="create_announcement.html">Sign
 				in</a>
 			<label><a href="register.html">Register</a></label>
 		</form>
