--- a/server/your_account.html
+++ b/server/your_account.html
@@ -54,7 +54,7 @@ body {
 			<div class="span9">
 				<div class="alert alert-info">
 					<h1>Welcome to Oftentimes2000!</h1>
-					<p>Shit</p>
+					<p>TBD</p>
 				</div>
 			</div>
 			<!--/span-->
