Modified the UI

--- a/server/create_announcement.html
+++ b/server/create_announcement.html
@@ -43,7 +43,7 @@ body {
 				<div class="well sidebar-nav">
 					<ul class="nav nav-list">
 						<li class="nav-header">Hi $Username!</li>
-						<li><a href="profile.html">Your Account</a></li>
+						<li><a href="your_account.html">Your Account</a></li>
 						<li class="active"><a href="create_announcement.html">Create
 								Announcement</a></li>
 						<li><a href="login.html">Log Out</a></li>
@@ -67,7 +67,7 @@ body {
 							<div class="control-group">
 
 								<!-- Text input-->
-								<label class="control-label" for="input01">Advertisement
+								<label class="control-label" for="input01">*Advertisement
 									Title</label>
 								<div class="controls">
 									<input type="text" placeholder="" class="input-xlarge">
@@ -77,7 +77,7 @@ body {
 							<div class="control-group">
 
 								<!-- Textarea -->
-								<label class="control-label">Highlights</label>
+								<label class="control-label">*Highlights</label>
 								<div class="controls">
 									<div class="textarea">
 										<textarea class=""> </textarea>
@@ -88,7 +88,7 @@ body {
 							<div class="control-group">
 
 								<!-- Textarea -->
-								<label class="control-label">Fine Print</label>
+								<label class="control-label">*Fine Print</label>
 								<div class="controls">
 									<div class="textarea">
 										<textarea class=""> </textarea>
@@ -180,7 +180,7 @@ body {
 							<div class="control-group">
 
 								<!-- Appended input-->
-								<label class="control-label">Radius</label>
+								<label class="control-label">*Radius</label>
 								<div class="controls">
 									<div class="input-append">
 										<input class="span4" placeholder="" type="text"> <span
@@ -193,7 +193,7 @@ body {
 
 							<div class="control-group">
 								<!-- Prepended text-->
-								<label class="control-label">Regular Price</label>
+								<label class="control-label">*Regular Price</label>
 								<div class="controls">
 									<div class="input-prepend">
 										<span class="add-on">$</span> <input class="span4"
@@ -206,7 +206,7 @@ body {
 							<div class="control-group">
 
 								<!-- Prepended text-->
-								<label class="control-label">Promotional Price</label>
+								<label class="control-label">*Promotional Price</label>
 								<div class="controls">
 									<div class="input-prepend">
 										<span class="add-on">$</span> <input class="span4"
@@ -219,7 +219,7 @@ body {
 							<div class="control-group">
 
 								<!-- Select Basic -->
-								<label class="control-label">From</label>
+								<label class="control-label">*From</label>
 								<div class="controls">
 									<input type="date" placeholder="" class="input-xlarge">
 								</div>
@@ -229,7 +229,7 @@ body {
 							<div class="control-group">
 
 								<!-- Select Basic -->
-								<label class="control-label">To</label>
+								<label class="control-label">*To</label>
 								<div class="controls">
 									<input type="date" placeholder="" class="input-xlarge">
 								</div>
@@ -250,6 +250,7 @@ body {
 								<div class="controls">
 									<button class="btn btn-primary">Submit</button>
 								</div>
+								<p>* required</p>
 							</div>
 
 						</fieldset>
@@ -263,7 +264,7 @@ body {
 							<div class="control-group">
 
 								<!-- Text input-->
-								<label class="control-label" for="input01">Announcement
+								<label class="control-label" for="input01">*Announcement
 									Title</label>
 								<div class="controls">
 									<input type="text" placeholder="" class="input-xlarge">
@@ -273,7 +274,7 @@ body {
 							<div class="control-group">
 
 								<!-- Textarea -->
-								<label class="control-label">Highlights</label>
+								<label class="control-label">*Highlights</label>
 								<div class="controls">
 									<div class="textarea">
 										<textarea class=""> </textarea>
@@ -365,7 +366,7 @@ body {
 							<div class="control-group">
 
 								<!-- Appended input-->
-								<label class="control-label">Radius</label>
+								<label class="control-label">*Radius</label>
 								<div class="controls">
 									<div class="input-append">
 										<input class="span4" placeholder="" type="text"> <span
@@ -379,7 +380,7 @@ body {
 							<div class="control-group">
 
 								<!-- Select Basic -->
-								<label class="control-label">From</label>
+								<label class="control-label">*From</label>
 								<div class="controls">
 									<input type="date" placeholder="" class="input-xlarge">
 								</div>
@@ -399,7 +400,7 @@ body {
 							<div class="control-group">
 
 								<!-- Select Basic -->
-								<label class="control-label">To</label>
+								<label class="control-label">*To</label>
 								<div class="controls">
 									<input type="date" placeholder="" class="input-xlarge">
 								</div>
@@ -431,6 +432,7 @@ body {
 								<div class="controls">
 									<button class="btn btn-primary">Submit</button>
 								</div>
+								<p>* required</p>
 							</div>
 						</fieldset>
 					</form>
@@ -442,7 +444,7 @@ body {
 							<div class="control-group">
 
 								<!-- Text input-->
-								<label class="control-label" for="input01">Event
+								<label class="control-label" for="input01">*Event
 									Title</label>
 								<div class="controls">
 									<input type="text" placeholder="" class="input-xlarge">
@@ -452,7 +454,7 @@ body {
 							<div class="control-group">
 
 								<!-- Textarea -->
-								<label class="control-label">Highlights</label>
+								<label class="control-label">*Highlights</label>
 								<div class="controls">
 									<div class="textarea">
 										<textarea class=""> </textarea>
@@ -544,7 +546,7 @@ body {
 							<div class="control-group">
 
 								<!-- Appended input-->
-								<label class="control-label">Radius</label>
+								<label class="control-label">*Radius</label>
 								<div class="controls">
 									<div class="input-append">
 										<input class="span4" placeholder="" type="text"> <span
@@ -558,7 +560,7 @@ body {
 							<div class="control-group">
 
 								<!-- Select Basic -->
-								<label class="control-label">From</label>
+								<label class="control-label">*From</label>
 								<div class="controls">
 									<input type="date" placeholder="" class="input-xlarge">
 								</div>
@@ -578,7 +580,7 @@ body {
 							<div class="control-group">
 
 								<!-- Select Basic -->
-								<label class="control-label">To</label>
+								<label class="control-label">*To</label>
 								<div class="controls">
 									<input type="date" placeholder="" class="input-xlarge">
 								</div>
@@ -610,6 +612,7 @@ body {
 								<div class="controls">
 									<button class="btn btn-primary">Submit</button>
 								</div>
+								<p>* required</p>
 							</div>
 						</fieldset>
 					</form>
