--- a/server/create_announcement.html
+++ b/server/create_announcement.html
@@ -1,60 +1,49 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Create Announcement &middot; Oftentimes2000</title>
-<link
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"
-	rel="stylesheet">
-<style type="text/css">
-body {
-	padding-top: 60px;
-	padding-bottom: 40px;
-}
-
-.sidebar-nav {
-	padding: 9px 0;
-}
-</style>
-<link
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css"
-	rel="stylesheet">
+	<meta charset="UTF-8">
+	<title>Oftentimes2000</title>
+	<script type="application/javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="application/javascript" src="js/script.js"></script>
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-	<div class="navbar navbar-inverse navbar-fixed-top">
-		<div class="navbar-inner">
-			<div class="container">
-				<a class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse"> </a> <a class="brand">Oftentimes2000</a>
-				<div class="nav-collapse collapse">
-					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
-					</ul>
+	<header>
+		<div class="navbar navbar-inverse navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="btn btn-navbar" data-toggle="collapse"
+						data-target=".nav-collapse"> </a> <a class="brand">Oftentimes2000</a>
+					<div class="nav-collapse collapse">
+						<button class="btn btn-info pull-right logout" onClick="UIManager.logout();">Logout!</button>
+						<p class="navbar-text pull-right username">
+							Hi <span class="navbar-link" id="active_user">Username</span>
+						</p>
+					</div>
 				</div>
-				<!--/.nav-collapse -->
 			</div>
 		</div>
-	</div>
+	</header>
 
-	<div class="container-fluid">
-		<div class="row-fluid">
-			<div class="span3">
-				<div class="well sidebar-nav">
-					<ul class="nav nav-list">
-						<li class="nav-header">Hi $Username!</li>
-						<li><a href="your_account.html">Your Account</a></li>
-						<li class="active"><a href="create_announcement.html">Create
-								Announcement</a></li>
-						<li><a href="login.html">Log Out</a></li>
-					</ul>
+	<div id="container">
+		<div class="container-fluid">
+			<div class="row-fluid">
+				<div class="span3">
+					<div class="well sidebar-nav">
+						<ul class="nav nav-list">
+							<li class="nav-header">Menu</li>
+							<li><a href="your_account.html">Your Account</a></li>
+							<li><a href="create_announcement.html">Create Announcement</a></li>
+						</ul>
+					</div>
 				</div>
-				<!--/.well -->
-			</div>
-			<div class="span9">
-				<h1>What type of service is it?</h1>
-				<select id="tos" onchange="formact(this.selectedIndex)">
-					<option>Select</option>
+				<div class="span9">
+					<h1>What type of service is it?</h1>
+				<select id="tos" onChange="format_announcement_form(this.selectedIndex)">
+					<option>Select type of service...</option>
 					<option>Advertisement</option>
 					<option>Public Service Announcement (PSA)</option>
 					<option>Event</option>
@@ -261,7 +250,7 @@ body {
 								<div class="controls">
 									<button class="btn btn-primary">Submit</button>
 								</div>
-								<p>* required</p>
+								<p><strong>* required</strong></p>
 							</div>
 
 						</fieldset>
@@ -454,7 +443,7 @@ body {
 								<div class="controls">
 									<button class="btn btn-primary">Submit</button>
 								</div>
-								<p>* required</p>
+								<p><strong>* required</strong></p>
 							</div>
 						</fieldset>
 					</form>
@@ -643,70 +632,20 @@ body {
 								<div class="controls">
 									<button class="btn btn-primary">Submit</button>
 								</div>
-								<p>* required</p>
+								<p><strong>* required</strong></p>
 							</div>
 						</fieldset>
 					</form>
 				</div>
 			</div>
-			<!--/span-->
 		</div>
 	</div>
-
-
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-transition.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-alert.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-modal.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-scrollspy.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tab.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tooltip.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-popover.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-button.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-carousel.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-typeahead.js"></script>
-
+	
 	<script>
 		$(document).ready(function() {
-			$("#advertisement").hide();
-			$("#public_service_announcement").hide();
-			$("#event").hide();
+			format_announcement_form(0);
 		});
-
-		function formact(index) {
-			if (index == 1) {
-				$("#advertisement").show();
-				$("#public_service_announcement").hide();
-				$("#event").hide();
-			} else if (index == 2) {
-				$("#advertisement").hide();
-				$("#public_service_announcement").show();
-				$("#event").hide();
-			} else if (index == 3) {
-				$("#advertisement").hide();
-				$("#public_service_announcement").hide();
-				$("#event").show();
-			} else {
-				$("#advertisement").hide();
-				$("#public_service_announcement").hide();
-				$("#event").hide();
-			}
-		}
 	</script>
+	
 </body>
 </html>
