--- a/server/login.html
+++ b/server/login.html
@@ -1,49 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Login &middot; Oftentimes2000</title>
-<link
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"
-	rel="stylesheet">
-<style type="text/css">
-body {
-	padding-top: 40px;
-	padding-bottom: 40px;
-	background-color: #f5f5f5;
-}
-
-.form-signin {
-	max-width: 300px;
-	padding: 19px 29px 29px;
-	margin: 0 auto 20px;
-	background-color: #fff;
-	border: 1px solid #e5e5e5;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-}
-
-.form-signin .form-signin-heading,.form-signin .checkbox {
-	margin-bottom: 10px;
-}
-
-.form-signin input[type="text"],.form-signin input[type="password"] {
-	font-size: 16px;
-	height: auto;
-	margin-bottom: 15px;
-	padding: 7px 9px;
-}
-</style>
-
-<link
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css"
-	rel="stylesheet">
-
+	<meta charset="UTF-8">
+	<title>Oftentimes2000</title>
+	<script type="application/javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="application/javascript" src="js/script.js"></script>
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
 
 	<div class="navbar navbar-inverse navbar-fixed-top">
@@ -52,12 +18,6 @@ body {
 				<a class="btn btn-navbar" data-toggle="collapse"
 					data-target=".nav-collapse"> 
 				</a> <a class="brand">Oftentimes2000</a>
-				<div class="nav-collapse collapse">
-					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
-					</ul>
-				</div>
-				<!--/.nav-collapse -->
 			</div>
 		</div>
 	</div>
@@ -73,32 +33,6 @@ body {
 			<label><a href="register.html">Register</a></label>
 		</form>
 	</div>
-
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-transition.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-alert.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-modal.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-scrollspy.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tab.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tooltip.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-popover.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-button.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-carousel.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-typeahead.js"></script>
+	
 </body>
 </html>
