--- a/server/register.html
+++ b/server/register.html
@@ -1,47 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>Register &middot; Oftentimes2000</title>
-<link
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"
-	rel="stylesheet">
-
-<style type="text/css">
-body {
-	padding-top: 40px;
-	padding-bottom: 40px;
-	background-color: #f5f5f5;
-}
-
-.form-signin {
-	max-width: 300px;
-	padding: 19px 29px 29px;
-	margin: 0 auto 20px;
-	background-color: #fff;
-	border: 1px solid #e5e5e5;
-	-webkit-border-radius: 5px;
-	-moz-border-radius: 5px;
-	border-radius: 5px;
-	-webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-	box-shadow: 0 1px 2px rgba(0, 0, 0, .05);
-}
-
-.form-signin .form-signin-heading,.form-signin .checkbox {
-	margin-bottom: 10px;
-}
-
-.form-signin input[type="text"],.form-signin input[type="password"] {
-	font-size: 16px;
-	height: auto;
-	margin-bottom: 15px;
-	padding: 7px 9px;
-}
-</style>
-<link
-	href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css"
-	rel="stylesheet">
+	<meta charset="UTF-8">
+	<title>Oftentimes2000</title>
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
@@ -50,12 +14,6 @@ body {
 			<div class="container">
 				<a class="btn btn-navbar" data-toggle="collapse"
 					data-target=".nav-collapse"> </a> <a class="brand">Oftentimes2000</a>
-				<div class="nav-collapse collapse">
-					<ul class="nav">
-						<li class="active"><a href="#">Home</a></li>
-					</ul>
-				</div>
-				<!--/.nav-collapse -->
 			</div>
 		</div>
 	</div>
@@ -68,35 +26,9 @@ body {
 				class="input-block-level" placeholder="Password"> <input
 				type="password" class="input-block-level"
 				placeholder="Password again"> <a
-				class="btn btn-large btn-primary" type="submit" href="profile.html">Register</a>
+				class="btn btn-large btn-primary" type="submit" href="index.html">Register</a>
 		</form>
 	</div>
 
-	<script
-		src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-transition.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-alert.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-modal.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-scrollspy.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tab.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-tooltip.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-popover.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-button.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-collapse.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-carousel.js"></script>
-	<script
-		src="http://twitter.github.com/bootstrap/assets/js/bootstrap-typeahead.js"></script>
 </body>
 </html>
