Create User and Annoucement APIs

--- a/server/create_announcement.html
+++ b/server/create_announcement.html
@@ -44,9 +44,9 @@
 					<h1>What type of service is it?</h1>
 				<select id="tos" onChange="format_announcement_form(this.selectedIndex)">
 					<option>Select type of service...</option>
-					<option>Advertisement</option>
-					<option>Public Service Announcement (PSA)</option>
-					<option>Event</option>
+					<option value="advertisement">Advertisement</option>
+					<option value="psa">Public Service Announcement (PSA)</option>
+					<option value="event">Event</option>
 				</select>
 
 				<div id="advertisement">
