--- a/server/login.html
+++ b/server/login.html
@@ -15,21 +15,17 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse"> 
-				</a> <a class="brand">Oftentimes2000</a>
+				<a class="brand">Oftentimes2000</a>
 			</div>
 		</div>
 	</div>
 
 	<div class="container">
-		<form class="form-signin">
+		<form id="signin_form" class="form-signin">
 			<h2 class="form-signin-heading">Please sign in</h2>
-			<input type="text" class="input-block-level"
-				placeholder="Email address"> <input type="password"
-				class="input-block-level" placeholder="Password">
-			<a class="btn btn-large btn-primary" type="submit" href="create_announcement.html">Sign
-				in</a>
+			<input type="text" class="input-block-level" placeholder="Email address" id="username" name="username"> 
+			<input type="password" class="input-block-level" placeholder="Password" id="password" name="password">
+			<a class="btn btn-large btn-primary" type="submit" href="create_announcement.html">Sign in</a>
 			<label><a href="register.html">Register</a></label>
 		</form>
 	</div>
