--- a/server/login.html
+++ b/server/login.html
@@ -5,6 +5,7 @@
 	<title>Oftentimes2000</title>
 	<script type="application/javascript" src="js/jquery-1.8.3.min.js"></script>
 	<script type="application/javascript" src="js/script.js"></script>
+	<script type="application/javascript" src="js/ajax_manager.js"></script>
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -21,13 +22,15 @@
 	</div>
 
 	<div class="container">
-		<form id="signin_form" class="form-signin">
+		<form id="signin_form" onSubmit="return false;" class="form-signin">
 			<h2 class="form-signin-heading">Please sign in</h2>
 			<input type="text" class="input-block-level" placeholder="Email address" id="username" name="username"> 
 			<input type="password" class="input-block-level" placeholder="Password" id="password" name="password">
-			<a class="btn btn-large btn-primary" type="submit" href="create_announcement.html">Sign in</a>
+			<a class="btn btn-large btn-primary" type="submit" onClick="AJAXManager.login();">Sign in</a>
 			<label><a href="register.html">Register</a></label>
 		</form>
+		
+		<div id="login_alert" class="alert_box"></div>
 	</div>
 	
 </body>
