--- a/server/create_announcement.html
+++ b/server/create_announcement.html
@@ -4,7 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Oftentimes2000</title>
 	<script type="application/javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="application/javascript" src="js/bootstrap.js"></script>
 	<script type="application/javascript" src="js/script.js"></script>
+	<script type="application/javascript" src="js/ajax_manager.js"></script>
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -15,10 +17,9 @@
 		<div class="navbar navbar-inverse navbar-fixed-top">
 			<div class="navbar-inner">
 				<div class="container">
-					<a class="btn btn-navbar" data-toggle="collapse"
-						data-target=".nav-collapse"> </a> <a class="brand">Oftentimes2000</a>
+					</a> <a class="brand">Oftentimes2000</a>
 					<div class="nav-collapse collapse">
-						<button class="btn btn-info pull-right logout" onClick="UIManager.logout();">Logout!</button>
+						<button class="btn btn-info pull-right logout" onClick="logout();">Logout!</button>
 						<p class="navbar-text pull-right username">
 							Hi <span class="navbar-link" id="active_user">Username</span>
 						</p>
@@ -672,6 +673,7 @@
 	
 	<script>
 		$(document).ready(function() {
+			init_main_page();
 			format_announcement_form(0);
 		});
 	</script>
