--- a/server/login.html
+++ b/server/login.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Oftentimes2000</title>
 	<script type="application/javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="application/javascript" src="js/bootstrap.js"></script>
 	<script type="application/javascript" src="js/script.js"></script>
 	<script type="application/javascript" src="js/ajax_manager.js"></script>
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
