--- a/server/register.html
+++ b/server/register.html
@@ -3,6 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Oftentimes2000</title>
+	<script type="application/javascript" src="js/jquery-1.8.3.min.js"></script>
+	<script type="application/javascript" src="js/bootstrap.js"></script>
+	<script type="application/javascript" src="js/script.js"></script>
+	<script type="application/javascript" src="js/ajax_manager.js"></script>
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
 	<link rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap-responsive.css">
 	<link rel="stylesheet" href="css/style.css">
@@ -12,23 +16,21 @@
 	<div class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
-				<a class="btn btn-navbar" data-toggle="collapse"
-					data-target=".nav-collapse"> </a> <a class="brand">Oftentimes2000</a>
+				<a class="brand">Oftentimes2000</a>
 			</div>
 		</div>
 	</div>
 
 	<div class="container">
-		<form class="form-signin">
+		<form id="signup_form" onSubmit="return false;" class="form-signin">
 			<h2 class="form-signin-heading">Register</h2>
-			<input type="text" class="input-block-level"
-				placeholder="Email address"> <input type="password"
-				class="input-block-level" placeholder="Password"> <input
-				type="password" class="input-block-level"
-				placeholder="Password again"> <a
-				class="btn btn-large btn-primary" type="submit" href="index.html">Register</a>
+			<input type="text" class="input-block-level" placeholder="Username" id="username" name="username"> 
+			<input type="password" class="input-block-level" placeholder="Password" id="password" name="password"> 
+			<input type="password" class="input-block-level" placeholder="Password again" id="password2" name="password2"> 
+			<a class="btn btn-large btn-primary" type="submit" onClick="AJAXManager.register();">Register</a>
 		</form>
 	</div>
 
+	<div id="signup_alert" class="alert_box"></div>
 </body>
 </html>
