List announcement and Delete

--- a/server/your_account.html
+++ b/server/your_account.html
@@ -36,8 +36,9 @@
 					<div class="well sidebar-nav">
 						<ul class="nav nav-list">
 							<li class="nav-header">Menu</li>
-							<li><a href="your_account.html">Your Account</a></li>
+							<li class="active"><a href="your_account.html">Your Account</a></li>
 							<li><a href="create_announcement.html">Create Announcement</a></li>
+							<li><a href="your_announcement.html">Your Announcements</a></li>
 						</ul>
 					</div>
 				</div>
